--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,13 @@
 .container {
   padding: 0 2rem;
+
+  background-image: url('../public/purple.jpg');
+  height: 100%;
+
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .main {
