--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,8 @@
 .container {
   padding: 0 2rem;
-
-  background-image: url('../public/purple.jpg');
-  height: 100%;
-
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  color: white;
+  text-align: center;
+  padding-top: 100px;
 }
 
 .main {
