--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background-image: url('../public/purple.jpg');
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
