--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-    width: 200px;
-    height: 300px;
-    background-color: gray;
+    margin: auto;
+    text-align: center;
+    margin-top: 160px;
 }
